# VST

./: .depend  .gitattributes  .gitignore  .gitmodules  .loadpath  .travis-script  .travis.yml  BUILD_ORGANIZATION  BUILD_ORGANIZATION.md  CHANGES  CI.md  CLIGHTGEN-LICENSE  CONFIGURE  HISTORY  LICENSE  LICENSE-OPAM  Makefile  Makefile-8.4  Makefile.bak  Makefile.bundled  Makefile_backup  PORTING.md  README  README.md  RefinedVST.md  RefinedVST.sh  VERSION  _CoqProject  archive-unused  assumptions_output  benchmark.py  benchmark_gen  coq-vst-32.opam  coq-vst-64.opam  coq-vst-iris.opam  coq-vst-zlist.opam  coq-vst.opam  coqflags  coqide  ivst.md  (+4 more)
FCF/: Admissibility.v  Asymptotic.v  Bernoulli.v  CONTRIBUTORS.md  CompFold.v  DetSem.v  DiffieHellman.v  Encryption.v  Encryption_PK.v  EqDec.v  FCF.v  Limit.v  Lognat.v  NoDup_gen.v  NotationV2.v  OracleCompFold.v  OracleHybrid.v  PRF.v  PRG.v  RndDup.v  RndInList.v  RndNat.v  Signature.v  SplitVector.v  StdNat.v  Tactics.v
VSTmodules/: VST_module.v  semax_body_linking.v
aes/: AES256.v  GF_ops_LL.v  ZOpsSimplNever.v  aes.v  aes_encryption_loop_body.v  aes_round_lemmas.v  aes_spec_ll.v  aesutils.v  api_specs.v  bitfiddling.v  compile.sh  conv_HL_to_LL.v  encryption_LL_round_step_eqs.v  equiv_GF_ops.v  equiv_encryption.v  find_slow_Qed.py  forwarding_table_lemmas.v  grab_mbedtls_aes.sh  invoke_clightgen.sh  invoke_clightgen_preprocessor.sh  isolate_inversion_slowness.v  list_lemmas.v  list_utils.v  mult_equiv_lemmas.v  partially_filled.v  sbox.v  simplify_Delta_SlowQed.v  spec_AES256_HL.v  spec_encryption_LL.v  spec_utils_LL.v  tablesLL.v  verif_aes256.v  verif_encryption_LL.v  verif_encryption_LL_after_loop.v  verif_encryption_LL_loop_body.v  verif_encryption_ll.v  verif_encryption_ll_module.v  verif_encryption_one_column.v  verif_gen_tables_LL.v  verif_setkey_enc_LL.v  (+2 more)
atomics/: RA_machine.v  SC_atomics.c  SC_atomics.h  SC_atomics.v  SC_atomicsI.v  SC_atomics_base.v  acq_rel_SW.v  acq_rel_atomics.v  desktop.ini  gen_atomics.c  general_atomics.v  general_atomics2.v  general_locks.v  hashtable.v  hashtable_atomic.c  hashtable_atomic.v  hashtable_atomic_ra.c  kvnode.c  kvnode_atomic.v  kvnode_atomic_ra.v  lock.c  lock.h  lock.v  maps.v  sim_atomics.c  sim_atomics.v  sim_ptr_atomics.c  sim_ptr_atomics.v  threads.c  threads.h  verif_atomics.v  verif_hashtable1.v  verif_hashtable_atomic.v  verif_hashtable_atomic_ra.v  verif_kvnode.v  verif_kvnode_atomic.v  verif_kvnode_atomic_ra.v  verif_lock.v  verif_lock_atomic.v  verif_ptr_atomics.v
builddep/: coq-vst-on-iris-builddep.opam
ccc26x86/: Archi.v  Asm.v  Asm_coop.v  Asm_drf.v  Asm_eff.v  Asm_event.v  Asm_nucular.v  Bounds.v  BuiltinEffects.v  Clight_coop.v  Clight_eff.v  Cminor.v  Conventions.v  Conventions1.v  Ctypes.v  Decidableplus.v  I64Helpers.v  LTL.v  Linear.v  Locations.v  Machregs.v  Op.v  Ordered.v  README  Separation.v  Stacklayout.v  Switch.v  load_frame.v
compcert/: .depend  Clight.v  Clight_sem.v  CminorgenproofRestructured.v  Coqlib.v  Csem.v  Csyntax.v  Ctypes.v  Events2.v  FIRST_README  Floats.v  GRAB  Globalenvs.v  Makefile  Makefile.clight  Makefile.config  Maps.v  Maps2.v  Memdata.v  Memory.v  Memtype.v  VERSION  Values.v  _CoqProject  make
compcert_new/: Debugging help.txt  FIRST_README  Makefile.config
compcomp/: AllocproofEFF.v  Asm_coop.v  Asm_eff.v  Asmgenproof0EFF.v  AsmgenproofEFF.v  BuiltinEffects.v  Clight_coop.v  Clight_eff.v  Clightnew_eff.v  CminorSel_coop.v  CminorSel_eff.v  Cminor_coop.v  Cminor_eff.v  CminorgenproofEFF.v  CminorgenproofRestructured.v  CminorgenproofSIM.v  Csharpminor_coop.v  Csharpminor_eff.v  CshmgenproofEFF.v  InliningproofEFF.v  LTL_coop.v  LTL_eff.v  LeakStructure.v  Linear_coop.v  Linear_eff.v  LinearizeproofEFF.v  Mach.v  Mach_coop.v  Mach_eff.v  OpEFF.v  README  RTL_coop.v  RTL_eff.v  RTLgenproofEFF.v  Santiago_tactics.v  SelectLongproof.v  SelectOp.v  SelectionproofEFF.v  SimplLocalsproofEFF.v  StackingproofEFF.v  (+15 more)
compositional_compcert/: .depend  Address.v  Coqlib2.v  Makefile  MemEvolve.v  bigstep_extensions.v  compcert_compiler_correctness.v  compiler_correctness_trans.v  core_semantics.v  extension.v  extension_proof.v  extension_safety.v  extspec.v  (+24 more)
lib/: CoqMakefile.local  CoqMakefile.local-late  Makefile  README.md  _CoqProject  coq-vst-lib.opam  coq-vstlib.opam
lib/include/: SC_atomics.h  VSTthreads.h  threads.h
lib/proof/: Errors-in-Math-functions.xlsx  spec_SC_atomics.v  spec_locks.v  spec_malloc.v  spec_math.v  spec_threads.v  verif_SC_atomics.v  verif_locks.v  verif_malloc.v  verif_math.v  verif_threads.v  version.v
lib/proof/src/: locks.c  malloc_extern.c  math_extern.c
lib/src/: SC_atomics.c  SC_atomics_extern.c  locks.c  math_extern.c  threads.c
lib/test/: README.md  incr.c  testmath.c  verif_incr.v  verif_incr_main.v  verif_testmath.v
lib/test/proof/: verif_incr_main.v
lib/test/src/: incr_main.c  testmath.c
refinedVST/typing/frontend_stuff/: ANNOTATIONS.md  FAQ.md  Makefile  coq-caesium-config-no-align.opam  dune  dune-project  frontend.md  rc-project.toml  refinedc.opam  test.c
refinedVST/typing/frontend_stuff/examples/: test_f_temps.c  test_f_temps_stripped.c
refinedVST/typing/frontend_stuff/examples/proofs/test_f_temps/: generated_code.v  generated_code_vst.v  generated_code_vst_clight.v  generated_proof_vst_f_temps.v  generated_proof_vst_main.v  generated_spec.v  generated_spec_vst.v  proof_files
refinedVST/typing/frontend_stuff/frontend/: ail_to_coq.ml  ail_to_coq.mli  cerb_wrapper.ml  cerb_wrapper.mli  comment_annot.ml  coq_ast.ml  coq_path.ml  coq_path.mli  coq_pp.ml  dune  extra.ml  location.ml  location.mli  main.ml  panic.ml  project.ml  rc_annot.ml  stubs.c  warn.ml
refinedVST/typing/frontend_stuff/frontend/tools/: gen_version.ml
refinedVST/typing/frontend_stuff/include/: assume.h  dune  refinedc.h  refinedc_builtins_specs.h  refinedc_malloc.h
refinedVST/typing/frontend_stuff/test/: generated_code.v  generated_proof_f_temps.v  generated_proof_f_temps_VSTver.v  generated_spec.v  generated_spec_VSTver.v  proof_files
refinedVST/typing/frontend_stuff/tools/: coqc_timing.sh
(+2677 files in other folders)
