opam-version: "2.0"
authors: ["Andrew W. Appel"
  "Lennart Beringer"
  "Josiah Dodds"
  "Qinxiang Cao"
  "Aquinas Hobor"
  "Gordon Stewart"
  "Qinshi Wang"
  "Sandrine Blazy"
  "Santiago Cuellar"
  "Robert Dockins"
  "Nick Giannarakis"
  "Samuel Gruetter"
  "Jean-Marie Madiot"
  ]
maintainer: "VST team"
homepage: "http://vst.cs.princeton.edu/"
dev-repo: "git+https://github.com/PrincetonUniversity/VST.git"
bug-reports: "https://github.com/PrincetonUniversity/VST/issues"
license: "https://raw.githubusercontent.com/PrincetonUniversity/VST/master/LICENSE"
build: [
  [make "ZLIST=platform" "BITSIZE=32" "depend"]
  [make "ZLIST=platform" "BITSIZE=32" "-j%{jobs}%" "vst"]
]
run-test: [make "ZLIST=platform" "BITSIZE=32" "-j%{jobs}%" "test"]
install: [
	make "ZLIST=platform" "BITSIZE=32" "install"
	]
depends: [
  "coq" {>= "8.13.0"}
  "coq-compcert-32" {= "3.10"}
  "coq-vst-zlist" {= "dev"}
]
synopsis: "Verified Software Toolchain"
description:
  "The software toolchain includes static analyzers to check assertions about your program; optimizing compilers to translate your program to machine language; operating systems and libraries to supply context for your program. The Verified Software Toolchain project assures with machine-checked proofs that the assertions claimed at the top of the toolchain really hold in the machine-language program, running in the operating-system context."
url {
  src: "git+https://github.com/PrincetonUniversity/VST.git#master"
}

