opam-version: "2.0"
version: "dev"
synopsis: "Verified Software Toolchain"
description: "The software toolchain includes static analyzers to check assertions about your program; optimizing compilers to translate your program to machine language; operating systems and libraries to supply context for your program. The Verified Software Toolchain project assures with machine-checked proofs that the assertions claimed at the top of the toolchain really hold in the machine-language program, running in the operating-system context."
authors: [
  "Andrew W. Appel"
  "Lennart Beringer"
  "Josiah Dodds"
  "Qinxiang Cao"
  "Aquinas Hobor"
  "Gordon Stewart"
  "Qinshi Wang"
  "Sandrine Blazy"
  "Santiago Cuellar"
  "Robert Dockins"
  "Nick Giannarakis"
  "Samuel Gruetter"
  "Jean-Marie Madiot"
]
maintainer: "VST team"
homepage: "http://vst.cs.princeton.edu/"
dev-repo: "git+https://github.com/PrincetonUniversity/VST.git"
bug-reports: "https://github.com/PrincetonUniversity/VST/issues"
license: "https://raw.githubusercontent.com/PrincetonUniversity/VST/master/LICENSE"

build: [
  [make "-j%{jobs}%" "vst" "IGNORECOQVERSION=true" "ZLIST=platform" "BITSIZE=32"]
]
install: [
  [make "install" "IGNORECOQVERSION=true" "ZLIST=platform" "BITSIZE=32"]
]
run-test: [
  [make "-j%{jobs}%" "test" "IGNORECOQVERSION=true" "ZLIST=platform" "BITSIZE=32"]
]
depends: [
  "coq" {>= "8.14" & < "8.17~"}
  "coq-compcert" {>= "3.11"}
  "coq-vst-zlist" {>= "2.11"}
  "coq-flocq" {>= "4.1.0"}
]
url {
  src: "git+https://github.com/PrincetonUniversity/VST.git#master"
}
